# cartesian_trajectory_tracking

./: CMakeLists.txt  README.md  package.xml
config/: jog_arm_teleop.yaml  massive_plots.sh  p_control_params.yaml  pd_control_params.yaml  reactive_params.yaml  reactive_params_double_integrator.yaml  reactive_params_single_integrator.yaml
include/cartesian_trajectory_tracking/: p_control.h  pd_control.h  pd_control_sim.h  utils.h
include/reactive_control/: reactive_control.h  reactive_control_double_integrator.h  reactive_control_double_integrator_sim.h  reactive_control_single_integrator.h  utils.h
launch/: cartesian_trajectory_tracking.launch  p_control.launch  pd_control.launch  reactive_camera.launch  reactive_control.launch  reactive_control_acc_launch.launch  reactive_control_double_integrator.launch  reactive_control_launch.launch  reactive_control_single_integrator.launch  reactive_control_triple_integration.launch  reactive_control_triple_integrator.launch  reactive_framework.launch  reactive_framework_csv_realhw.launch  reactive_framework_live.launch  reactive_framework_rosbag.launch  reactive_framework_rosbag_sim.launch  reactive_framework_sim.launch  reactive_raw_points.launch
launch/redundant_launches/: jog_arm_teleop.launch  reactive_framework_live.launch  reactive_framework_rosbag.launch  reactive_framework_rosbag_sim.launch
scripts/: camera_points_read.py  case_raw.py  check_time.py  debug_velocity.py  ee_state_read.py  frames.gv  plot_test.py  processed_points_read.py  pub_125Hz.py  pub_22Hz.py  raw.py  raw_publish.py  raw_read.py  reactive_piecewise_bezier.py  reactive_point_preprocess.py  reactive_point_preprocess_down_inter.py  reactive_point_preprocess_down_inter_bad.py  reactive_point_preprocess_down_inter_offline.py  reactive_point_preprocess_down_inter_real_time.py  reactive_point_preprocess_new.py  reactive_point_raw.py  reactive_std_downsampling.py  smooth_read.py  test.py  test.yaml  test_control_input.py  test_pygame.py  times_jog_arm.py  visualization_psychopy.py  visualization_pygame.py  yaml_read.py
src/: check_delay.cpp  check_jog_arm.cpp  check_jog_arm_timer.cpp  check_si.cpp  input_rotate.cpp  jog_arm_check.cpp  jog_arm_teleop.cpp  p_control.cpp  pd_control.cpp  pd_control_sim.cpp  raw_input.cpp  reactive_control.cpp  reactive_control_acc.cpp  reactive_control_double_integrator_realhw.cpp  reactive_control_double_integrator_sim.cpp  reactive_control_quat_feedback.cpp  reactive_control_single_integrator.cpp  reactive_control_triple_integration.cpp  utils.cpp
